[package]
name = "appel"
version = "0.1.0"
authors = ["Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com>", "Tom Smeding <tom.smeding@gmail.com>"]
edition = "2018"

[dependencies]
pom = "^3.1"
rand = "0.8"
tabwriter = "1.2.1"
clap = "2.33.0"
dtoa = "0.4"

rug = { version = "1.18", features = ["default", "num-traits"] }
num-traits = "*"
num-bigint = "0.4"
num-rational = "0.4"

dyn-clonable = "0.9.0"

replace_with = "0.1.7"

smallvec = { version = "1.10.0", features = ["union", "const_generics", "const_new"] }
