[package]
name = "appel"
version = "0.1.0"
authors = ["Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com>", "Tom Smeding <tom.smeding@gmail.com>"]
edition = "2021"

[profile.release]
debug = true
lto = true

[dependencies]
pom = "^3.1"
rand = "0.8"
clap = "2.33.0"
dtoa = "1"

rug = { version = "1.18", features = ["default", "num-traits"] }
gmp-mpfr-sys = "*"
num-traits = "*"

dyn-clonable = "0.9.0"

itertools = "0.13"
